Summary shows instead of example twice in the buttons per member Fixed toc padding on mobile screen Fixed dark mode coloring in member titles and increased its sie

--- a/scripts/Template/public/_extended.css
+++ b/scripts/Template/public/_extended.css
@@ -27,7 +27,7 @@ article h3 {
 
 article .class-member h3 {
     margin: 0 !important;
-    font-size: 16px !important;
+    font-size: 20px !important;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -101,6 +101,10 @@ footer {
 .doc-toggles .example-toggle {
     color: #0f0f0f;
     margin-bottom: 0;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 .doc-toggles {
@@ -187,6 +191,14 @@ code.hljs {
     flex: 0.45;
 }
 
+@media screen and (max-width: 768px) {
+    .toc-offcanvas {
+        padding: 0;
+        border: 0;
+        max-width: unset;
+    }
+}
+
 .markdown.example-content,
 .markdown.summary-content,
 .markdown.remarks-content,
@@ -256,8 +268,9 @@ code.hljs {
 }
 
 .class-content-title {
-    font-size: 20px;
-    color: rgb(207, 34, 46);
+    font-size: 22px;
+    color: var(--bs-body-color);
+
     margin-bottom: 0;
 
     & span {
@@ -269,7 +282,7 @@ code.hljs {
 [data-bs-theme=dark] {
     .class-enum {
         background: #1e1e1e;
-        color: #dcdcdc;
+        color: var(--bs-body-color);
     }
 
     .class-enum-key-summary {
@@ -290,6 +303,24 @@ code.hljs {
     .doc-toggles .remarks-toggle,
     .doc-toggles .summary-toggle,
     .doc-toggles .example-toggle {
-        color: white;
+        color: var(--bs-body-color);
+    }
+
+    .member-static {
+        color: var(--bs-link-color);
+    }
+
+    .member-returntype {
+        color: var(--bs-link-color);
+    }
+
+    .markdown.example-content,
+    .markdown.summary-content,
+    .markdown.remarks-content,
+    .content>article .markdown.summary,
+    .content>article>pre>code.hljs {
+        background: rgb(73, 77, 71);
+        border: solid 1px rgb(123, 137, 141);
+        color: var(--bs-body-color);
     }
 }
